# BetaDev

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  main.c  mnist.py  nn  run_tests
.github/workflows/: make-single-platform.yml
big_data/: mnist.py  preprocessor.py
lib/: batch.h  matrix.h  neuralnet.c  neuralnet.cpp  neuralnet.h  neuralnettmp.h  nn_batch.cpp  region.h
lib/include/: batch.h  matrix.h  nn.h  region.h
lib/src/: nn.cpp  nn_batch.cpp  nn_matrix.cpp  nn_region.cpp
tests/: run-tests.cpp
